--- a/firebase.json
+++ b/firebase.json
@@ -4,8 +4,7 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**",
-      "src/firebase.js"
+      "**/node_modules/**"
     ],
     "rewrites": [
       {
